--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ button {
 <body>
 
 <div class="container">
-    <h1>Hey Vaishnavi 💖<br>Will you be my Valentine? ❤️</h1>
+    <h1>Hey Cutie 💖<br>Will you be my Valentine? ❤️</h1>
     <button id="yesBtn">Haanji ❤️</button>
     <button id="noBtn">Nahi 😢</button>
 </div>
